<resources>
    <string name="app_name">iotus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gurupada IOTUS</string>
    <string name="nav_header_subtitle">IOT Platform</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gateway">Gateway</string>
    <string name="menu_temp">Temp Sensor</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_door">Door</string>
    <string name="menu_onoff">OnOff</string>


    <string name="signed_in_fmt">Signed in: %s</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
</resources>