<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_temp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_gateway"
            android:icon="@drawable/ic_menu_gateway"
            android:title="@string/menu_gateway" />
        <item
            android:id="@+id/nav_temp"
            android:icon="@drawable/ic_menu_temp"
            android:title="@string/menu_temp" />
        <item
            android:id="@+id/nav_door"
            android:icon="@drawable/ic_menu_temp"
            android:title="@string/menu_door" />
        <item
            android:id="@+id/nav_onoff"
            android:icon="@drawable/ic_menu_temp"
            android:title="@string/menu_onoff" />
    </group>
</menu>