<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.aseemsethi.iotus.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.aseemsethi.iotus.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_gateway"
        android:name="com.aseemsethi.iotus.ui.gateway.GatewayFragment"
        android:label="@string/menu_gateway"
        tools:layout="@layout/fragment_gateway" />

    <fragment
        android:id="@+id/nav_temp"
        android:name="com.aseemsethi.iotus.ui.temp.TempFragment"
        android:label="@string/menu_temp"
        tools:layout="@layout/fragment_temp" />

    <fragment
        android:id="@+id/nav_door"
        android:name="com.aseemsethi.iotus.ui.door.DoorFragment"
        android:label="@string/menu_temp"
        tools:layout="@layout/fragment_door" />

    <fragment
        android:id="@+id/nav_onoff"
        android:name="com.aseemsethi.iotus.ui.onoff.OnoffFragment"
        android:label="@string/menu_temp"
        tools:layout="@layout/fragment_onoff" />
</navigation>